<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/campoTexto"
        android:hint="@string/ingrese_el_numero_a_convertir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/campoTexto"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radioBinario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="seleccionarBase"
            android:text="@string/binario" />

        <RadioButton
            android:id="@+id/radioOctal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="seleccionarBase"
            android:text="@string/octal" />

        <RadioButton
            android:id="@+id/radioHexadecimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="seleccionarBase"
            android:text="@string/hexadecimal" />
    </RadioGroup>

    <Button
        android:id="@+id/convertir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="convertir"
        android:text="@string/convertir" />

    <TextView
        android:id="@+id/resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/convertir"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="89dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
</RelativeLayout>
